--- a/cit_002_gmao_air_quality/Dockerfile
+++ b/cit_002_gmao_air_quality/Dockerfile
@@ -14,6 +14,7 @@ RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install netCDF4==1.5.3
 RUN pip install bs4==0.0.1
 RUN pip install numpy==1.18.1
+RUN pip install earthengine-api --upgrade
 
 # set name
 ARG NAME=nrt-script
