--- a/cit_038_waccm_atmospheric_chemistry_model/Dockerfile
+++ b/cit_038_waccm_atmospheric_chemistry_model/Dockerfile
@@ -12,6 +12,7 @@ RUN pip install oauth2client==3.0.0
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
 RUN pip install bs4==0.0.1
 RUN pip install numpy==1.14.3
+RUN pip install earthengine-api --upgrade
 
 # set name
 ARG NAME=nrt-script
