--- a/cit_035_tropomi_atmospheric_chemistry_model/Dockerfile
+++ b/cit_035_tropomi_atmospheric_chemistry_model/Dockerfile
@@ -9,7 +9,7 @@ RUN pip install -U pip
 # install application libraries
 RUN pip install oauth2client==3.0.0
 RUN pip install -e git+https://github.com/resource-watch/eeUtil#egg=eeUtil
-RUN pip install earthengine-api --upgrade
+RUN pip install earthengine-api==0.1.215
 
 # set name
 ARG NAME=nrt-script
