--- a/upload_worldbank_data/Dockerfile
+++ b/upload_worldbank_data/Dockerfile
@@ -10,6 +10,7 @@ RUN pip install boto3==1.10.45
 RUN pip install requests==2.22.0
 RUN pip install -e git+https://github.com/resource-watch/cartosql.py.git#egg=cartosql
 RUN pip install carto==1.11.1
+RUN pip install LMIPy
 
 # set name
 ARG NAME=upload-world-bank
